source/stylesheets/layouts/default.css.sass
@charset "utf-8"

+font-face("CaviarDreams", font-files("CaviarDreams.woff", "CaviarDreams.ttf", "CaviarDreams.svg", "CaviarDreams.eot"))
+font-face("OpenSans-Regular", font-files("OpenSans-Regular.woff", "OpenSans-Regular.ttf", "OpenSans-Regular.svg", "OpenSans-Regular.eot"))
+font-face("GeneralSetFoundicons", font-files("general_foundicons.woff", "general_foundicons.ttf", "general_foundicons.svg", "general_foundicons.eot"))

+sticky-footer(80px, ".container", ".push-footer", "footer.page")

body
  background-color: $backgroundColor

/*body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, th, td
  font-size: inherit

/*p
  font-size: 1em

p
  line-height: 1.5!important
  &.lead
    line-height: 1.5!important


h1, h2, h3, h4, h5, h6
  font-weight: normal
  font-style: normal

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
  color: $headerFontColor

h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover
  color: $headerFontColor

h1.inline, h2.inline, h3.inline, h4.inline, h5.inline, h6.inline
  display: inline

a:hover
  text-decoration: underline!important

/*h1
  font-size: 4.4em

/*h2
  font-size: 3.7em

/*h3
  font-size: 2.7em

/*h4
  font-size: 2.3em

/*h5
  font-size: 1.7em

h6
  font-size: 1.125em

h5, h6
  font-family: $bodyFontFamily
  font-weight: bold

p, li
  font-size: 1.125em

li
  p, h6
    font-size: 1em

pre
  padding-top: 0!important

code
  font-weight: normal
  &.inline
    padding: 2px 4px

figure
  display: table
  margin: 40px 0px
  figcaption
    font-style: italic
    text-align: center
    margin-top: 6px

.link-color
  color: $mainColor!important

.float-left
  float: left

.float-right
  float: right

.small-title
  font-size: 16px

.clear-fix
  &::after
    clear: both
  &::before, &::after
    content: ""
    display: table

.orbit-wrapper
  height: auto!important
  .timer
    display: none

.own-ref
  font-size: 1em

dl.tabs
  margin-bottom: 40px
  dd.active
    border-top: none
    margin-top: 0px
    a
      border-top: 1px solid #E6E6E6
      //border-radius: 4px 4px 0px 0px
      background-color: $backgroundColor
      &:hover
        text-decoration: none!important
  @media #{$mediaSmall}
    margin-bottom: 70px
    //dd
      a
        color: inherit!important
        background-color: $backgroundColor!important
    dd.active
      a
        color: inherit!important
        //background-color: #000000!important

.info-box
  margin: 40px 0px!important
  padding: 20px!important
  border: 1px solid #5A5A5A!important
  background-color: #000000
  .icon
    display: block
    float: left
    text-indent: -9999px
    margin: 0px 8px 4px 0px
  p:first-child
    margin-bottom: 4px

.cc-by-nc-sa
  a.icon
    width: 90px
    height: 32px
    background: url("/images/creative-commons/by-nc-sa.png") no-repeat
    @media #{$mediaGreaterPixelRatio}
      background: url("/images/creative-commons/by-nc-sa@2x.png") no-repeat
      background-size: 90px 32px

.warning.icon
  display: block
  width: 75px
  height: 66px
  background: url("/images/warning-icon.png") no-repeat
  background-size: 75px 66px


header.page
  padding: 20px 0px 20px 0px
  margin-bottom: 30px
  background-color: #191919
  border-bottom: 4px solid #C9C9C9
  @media #{$mediaSmall}
    padding-bottom: 10px
  h1.logo
    margin: 0px
    a
      display: block
      width: 35px
      height: 40px
      text-indent: -9999px
      background: url("/images/logo.png") no-repeat
      @media #{$mediaGreaterPixelRatio}
        background: url("/images/logo@2x.png") no-repeat
        background-size: 35px 40px
  .menu-button
    margin: 12px 4px 0px 0px
    span
      display: block
      width: 18px
      height: 2px
      margin-bottom: 5px
      background-color: #FFFFFF


.nav-bar.social-media
  height: 32px
  margin: 0px
  background: none
  @media #{$mediaSmall}
    li
      float: left!important
  &.mobile
    li
      margin-left: 16px
    @media #{$mediaSmallPortrait}
      display: table
      margin: 14px auto 0px
      li
        margin-left: 16px
  li
    border: none!important
    margin-left: 8px
    box-shadow: none!important
    a
      width: 32px
      height: 32px
      padding: 0px
      text-indent: -9999px
      &.mobile
        width: 48px
        height: 48px
  li:first-child
    margin-left: 0px
  .twitter
    background: url("/images/social-media/twitter-icon.png") no-repeat
    &.mobile
      background: url("/images/social-media/twitter-icon-mobile.png") no-repeat
      background-size: 48px 48px
  .linkedin
    background: url("/images/social-media/linkedin-icon.png") no-repeat
    &.mobile
      background: url("/images/social-media/linkedin-icon-mobile.png") no-repeat
      background-size: 48px 48px
  .github
    background: url("/images/social-media/github-icon.png") no-repeat
    &.mobile
      background: url("/images/social-media/github-icon-mobile.png") no-repeat
      background-size: 48px 48px
  .facebook
    background: url("/images/social-media/facebook-icon.png") no-repeat
    &.mobile
      background: url("/images/social-media/facebook-icon-mobile.png") no-repeat
      background-size: 48px 48px

=main-nav-active-item
  border-top: 2px solid #F9F9F9
  padding-top: 0px!important
  text-decoration: none!important

.main-nav
  margin: 0px
  background: none
  li
    border: none!important
    margin-left: 14px
    box-shadow: none!important
    background: none!important
    a
      padding: 2px 0px 0px!important
      font-family: "OpenSans-Regular", "Verdana", Arial, sans-serif
      font-size: 20px!important
      color: $headerFontColor!important
      text-transform: uppercase
      &:hover
        +main-nav-active-item
  li.active
    a
      +main-nav-active-item
  li:first-child
    padding-top: 0px
    margin-left: 0px
  @media only screen and (min-width: 700px) and (max-width: 820px)
    li
      a
        font-size: 18px!important
  @media #{$mediaSmall}
/* ... */

